add each error res to api
